List's algorithm implementation init.